--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
                             <span class="item-category">Music</span>
                             <h4 class="item-title">Relaxing BGM Demo</h4>
                             <p style="font-size:0.9rem; color:var(--text-secondary);">
-                                冷媒ガスの会社のHPのBGM。<br>
+                                冷媒ガス会社HPのBGM。<br>
                                 曲が目立ちすぎることなく、画像と社風に合うよう作成。
                             </p>
                         </div>
