--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
                             <span class="item-category">Music</span>
                             <h4 class="item-title">Relaxing BGM Demo</h4>
                             <p style="font-size:0.9rem; color:var(--text-secondary);">
-                                冷媒ガス会社HPのBGM。<br>
+                                冷媒ガスの会社のHPのBGM。<br>
                                 曲が目立ちすぎることなく、画像と社風に合うよう作成。
                             </p>
                         </div>
@@ -1171,7 +1171,7 @@
                         2. 新しいフォームを作成
                         3. 発行されたURLを action="" の中に貼り付ける
                     -->
-                    <form class="contact-form" action="https://formspree.io/f/https://formspree.io/f/xqedknjk" method="POST">
+                    <form class="contact-form" action="https://formspree.io/f/xqedknjk" method="POST">
                         <div class="form-group">
                             <label class="form-label" for="name">お名前</label>
                             <input type="text" id="name" name="name" class="form-input" placeholder="例：山田 太郎" required>
