--- a/index.html
+++ b/index.html
@@ -1132,7 +1132,7 @@
                         <h3 class="price-category">AI Education</h3>
                         <p style="text-align:left; font-size:0.85rem; color:var(--text-secondary); margin-bottom:15px;">
                             「今更聞けないAI教室」出張<br>
-                            （※どちらも交通費込み）
+                            （※品川区在住。交通費込み。遠方は交通費要相談）
                         </p>
                         <div class="price-list">
                             <div class="price-item">
